# .Neon

./: .gitignore  ARCHITECTURE.md  AUDIT.md  BASELINE_GREEN_E962C4B.md  BRIDGES.md  CAS.md  CONTRIBUTING.md  CORE_SPEC.md  CS_SYMBOLIC_NOTATION.md  DEPRECATION_NOTICE.md  GLOSSARY.md  GRAVITY_ANCHOR.md  INNOVATION_ENGINE.md  LAUNCH.md  LINEAGE_SEMANTICS.md  MOJO_COMPATIBILITY.md  NORTH_STAR.md  PHASE_2_BRIDGE.md  PRIMITIVE_FISSION.md  PROTOCOL.md  README.md  REFERENCE_LIFECYCLE.md  ROADMAP_LINKS.md  ROADMAP_V0_2.md  RUNTIME_DIRECTION.md  SPEC_NEON_FILE_FORMAT.md  STRUCTURE.md  TESTING.md  TRUST_PROTOCOL.md  V0_1_ALPHA.md  VERIFICATION.md  VERTICALS.md  VERTICAL_MAP.json  WEIRD_LAYER_OUTLINE.md  WORKLEDGER_COMMANDS.md  neon_cli.py  pyproject.toml
.github/: pull_request_template.md
.neon-vault/: identity.json  ledger.sqlite
EXAMPLES/: hello-world.neon
docs/: README.md  SUNTAN_IMPORT_CONTRACT.md
examples/: symbolic-state-example.md
reports/: CONTINUITY_REPORT_TEMPLATE.md
schemas/: README.md  proof_packet_schema_v0.1.json  rights_schema_v0.1.json
scripts/: __init__.py  check_vertical_alignment.py  release_check.py
tests/: README.md  SMOKE_TEST.md  test_artifact_validation.py  test_cas_fetch.py  test_cas_surface.py  test_cli.py  test_cli_command_surface.py  test_cli_compat_exports.py  test_cli_parser_smoke.py  test_command_modules_import.py  test_demo_loop.py  test_doctor_command.py  test_golden_fixtures.py  test_golden_phase_a.py  test_hash.py  test_invalid_cas_uri.py  test_lifecycle_surface.py  test_lineage_graph.py  test_metrics.py  test_metrics_surface.py  (+12 more)
(+75 files in other folders)
