[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-workledger"
version = "0.1.0a0"
description = "Local-first lineage infrastructure for human-origin intelligence"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Carl Sowers"}
]

[project.scripts]
neon = "src.neon.cli:main"
